Fixed main box spacing issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,9 @@ $nameTextDefault: #038C3E;
 $nameTextHover: #0CF25D;
 
 #main {
+    min-height: 80vh;
     margin: 30px 0;
+    display: flex;
 }
 
 #main p {
@@ -54,7 +56,7 @@ label {
     margin: auto;
     max-width: 1440px;
     padding: 0 1em;
-    height: inherit;
+    height: 100%;
     gap: 16px;
     display: flex;
     justify-content: center;
